--- a/MVC/Views/Home/Contact.cshtml
+++ b/MVC/Views/Home/Contact.cshtml
@@ -1,9 +1,12 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Contact";
+    
 }
+
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
-
+<h3>@ViewData["ses"]</h3>
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
