--- a/MVC/Views/Web/Index.cshtml
+++ b/MVC/Views/Web/Index.cshtml
@@ -1,4 +1,12 @@
 ﻿
+    @foreach (string s in ViewBag.name)
+    {
+        <h1>
+            @s
+        </h1>
+
+    }
+      
 
 <h2>Index</h2>
 
